--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
         "Website": {
             "description": "Merchant Website (usual value is DEFAULT)",
             "value": "DEFAULT"
+        },
+        "Mode": {
+            "description": "WEB/WAP for Desktop and Mobile Mode",
+            "value": "WEB"
         }
     }
 }
